--- a/testing.ipynb
+++ b/testing.ipynb
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,6 +332,7 @@
     "        df = df\n",
     "    \n",
     "    def inspect():\n",
+    "        \n",
     "        size = df.size\n",
     "        shape = df.shape\n",
     "        dimentions = df.ndim\n",
@@ -339,7 +340,7 @@
     "        summary = df.describe()\n",
     "        columns = df.columns\n",
     "        n_col = len(columns)\n",
-    "        types = df.dtypes()\n",
+    "        types = df.dtypes\n",
     "        duplicated = df.duplicated().sum()\n",
     "        p_dup = duplicated / (len(df)*100)\n",
     "        missing = df.isnull().sum()\n",
@@ -351,7 +352,278 @@
     "        datetime = df.select_dtypes(include=['datetime64'])\n",
     "        corr = df.corr(numeric_only=True)\n",
     "\n",
-    "\n"
+    "        for col in numeric.columns:\n",
+    "            print(f\"\\nProcessing column for calculating skewness: {col}\")\n",
+    "\n",
+    "            skewness_value = skew(numeric[col].dropna())  # Dropping NaN to avoid skew calculation issues\n",
+    "            print(f\"Skewness of '{col}': {skewness_value}\")\n",
+    "\n",
+    "            if skewness_value > 1:\n",
+    "                print(f\"'{col}' is Highly Positively Skewed(Right Skewed).\")\n",
+    "            elif 0.5 < skewness_value <= 1:\n",
+    "                print(f\"'{col}' is Moderately Positively Skewed.\")\n",
+    "            elif -0.5 <= skewness_value <= 0.5:\n",
+    "                print(f\"'{col}' is Approximately Symmetric.\")\n",
+    "            elif -1 <= skewness_value < -0.5:\n",
+    "                print(f\"'{col}' is Moderately Negatively Skewed(Left Skewed).\")\n",
+    "            else:\n",
+    "                print(f\"'{col}' is Highly Negatively Skewed.\")\n",
+    "        \n",
+    "        for col in numeric.columns:\n",
+    "            print(f\"\\nProcessing column for kurtosis calculation: {col}\")\n",
+    "\n",
+    "            kurtosis_value = kurtosis(numeric[col].dropna())  # Dropping NaN to avoid calculation issues\n",
+    "            print(f\"Kurtosis of '{col}': {kurtosis_value}\")\n",
+    "\n",
+    "            if kurtosis_value > 0:\n",
+    "                print(f\"'{col}' is Leptokurtic (heavy tails of outliers).\")\n",
+    "            elif kurtosis_value == 0:\n",
+    "                print(f\"'{col}' is Mesokurtic (normal distribution).\")\n",
+    "            else:\n",
+    "                print(f\"'{col}' is Platykurtic (light tails of outliers).\")\n",
+    "        \n",
+    "        print(\"Total no. of elements: \",size)\n",
+    "        print(\"*\"*100)\n",
+    "        print(\"Shape of the dataset: \",shape)\n",
+    "        print(\"*\"*100)\n",
+    "        print(\"Dimentions of the dataset: \",dimentions)\n",
+    "        print(\"*\"*100)\n",
+    "        print(\"Information of the dataset: \",info)\n",
+    "        print(\"*\"*100)\n",
+    "        print(\"Statistical summary of the dataset: \",summary)\n",
+    "        print(\"*\"*100)\n",
+    "        print(\"Name of the columns: \",columns)\n",
+    "        print(\"*\"*100)\n",
+    "        print(\"Total no. of columns: \",n_col)\n",
+    "        print(\"*\"*100)\n",
+    "        print(\"Datatypes of the dataset: \",types)\n",
+    "        print(\"*\"*100)\n",
+    "        print(\"No. of duplicated values: \",duplicated)\n",
+    "        print(\"*\"*100)\n",
+    "        print(\"Percentage (%) of duplicated values: \",p_dup*100)\n",
+    "        print(\"*\"*100)\n",
+    "        print(\"No. of missing values: \",missing)\n",
+    "        print(\"*\"*100)\n",
+    "        print(\"Percentage (%) of missing values: \",p_miss*100)\n",
+    "        print(\"*\"*100)\n",
+    "        print(\"Numerical columns are: \",numeric)\n",
+    "        print(\"*\"*100)\n",
+    "        print(\"No. of numrerical columns are: \",n_num)\n",
+    "        print(\"*\"*100)\n",
+    "        print(\"Categoical cloumns are: \",categoical)\n",
+    "        print(\"*\"*100)\n",
+    "        print(\"No. of categoical columns are: \",n_col)\n",
+    "        print(\"*\"*100)\n",
+    "        print(\"Date type columns are: \",datetime)\n",
+    "        print(\"*\"*100)\n",
+    "        print(\"Numerical correlations: \",corr)\n",
+    "        print(\"*\"*100)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3642 entries, 0 to 3641\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column                      Non-Null Count  Dtype  \n",
+      "---  ------                      --------------  -----  \n",
+      " 0   Company                     3642 non-null   object \n",
+      " 1   Location_HQ                 3642 non-null   object \n",
+      " 2   Industry                    3642 non-null   object \n",
+      " 3   Laid_Off_Count              2389 non-null   float64\n",
+      " 4   Date                        3642 non-null   object \n",
+      " 5   Source                      3642 non-null   object \n",
+      " 6   Funds_Raised                3252 non-null   float64\n",
+      " 7   Stage                       3642 non-null   object \n",
+      " 8   Date_Added                  3642 non-null   object \n",
+      " 9   Country                     3642 non-null   object \n",
+      " 10  Percentage                  2342 non-null   float64\n",
+      " 11  List_of_Employees_Laid_Off  3642 non-null   object \n",
+      "dtypes: float64(3), object(9)\n",
+      "memory usage: 341.6+ KB\n",
+      "\n",
+      "Processing column for calculating skewness: Laid_Off_Count\n",
+      "Skewness of 'Laid_Off_Count': 9.441710861856334\n",
+      "'Laid_Off_Count' is Highly Positively Skewed(Right Skewed).\n",
+      "\n",
+      "Processing column for calculating skewness: Funds_Raised\n",
+      "Skewness of 'Funds_Raised': 21.013927810905585\n",
+      "'Funds_Raised' is Highly Positively Skewed(Right Skewed).\n",
+      "\n",
+      "Processing column for calculating skewness: Percentage\n",
+      "Skewness of 'Percentage': 1.6681900301760468\n",
+      "'Percentage' is Highly Positively Skewed(Right Skewed).\n",
+      "\n",
+      "Processing column for kurtosis calculation: Laid_Off_Count\n",
+      "Kurtosis of 'Laid_Off_Count': 109.06847670902599\n",
+      "'Laid_Off_Count' is Leptokurtic (heavy tails of outliers).\n",
+      "\n",
+      "Processing column for kurtosis calculation: Funds_Raised\n",
+      "Kurtosis of 'Funds_Raised': 516.6361722167625\n",
+      "'Funds_Raised' is Leptokurtic (heavy tails of outliers).\n",
+      "\n",
+      "Processing column for kurtosis calculation: Percentage\n",
+      "Kurtosis of 'Percentage': 1.5531610607046469\n",
+      "'Percentage' is Leptokurtic (heavy tails of outliers).\n",
+      "Total no. of elements:  43704\n",
+      "****************************************************************************************************\n",
+      "Shape of the dataset:  (3642, 12)\n",
+      "****************************************************************************************************\n",
+      "Dimentions of the dataset:  2\n",
+      "****************************************************************************************************\n",
+      "Information of the dataset:  None\n",
+      "****************************************************************************************************\n",
+      "Statistical summary of the dataset:         Laid_Off_Count   Funds_Raised   Percentage\n",
+      "count     2389.000000    3252.000000  2342.000000\n",
+      "mean       257.926329     798.569494     0.281216\n",
+      "std        829.432277    4758.393161     0.287294\n",
+      "min          3.000000       0.000000     0.000000\n",
+      "25%         40.000000      51.000000     0.100000\n",
+      "50%         80.000000     166.000000     0.170000\n",
+      "75%        181.000000     469.250000     0.300000\n",
+      "max      14000.000000  121900.000000     1.000000\n",
+      "****************************************************************************************************\n",
+      "Name of the columns:  Index(['Company', 'Location_HQ', 'Industry', 'Laid_Off_Count', 'Date',\n",
+      "       'Source', 'Funds_Raised', 'Stage', 'Date_Added', 'Country',\n",
+      "       'Percentage', 'List_of_Employees_Laid_Off'],\n",
+      "      dtype='object')\n",
+      "****************************************************************************************************\n",
+      "Total no. of columns:  12\n",
+      "****************************************************************************************************\n",
+      "Datatypes of the dataset:  Company                        object\n",
+      "Location_HQ                    object\n",
+      "Industry                       object\n",
+      "Laid_Off_Count                float64\n",
+      "Date                           object\n",
+      "Source                         object\n",
+      "Funds_Raised                  float64\n",
+      "Stage                          object\n",
+      "Date_Added                     object\n",
+      "Country                        object\n",
+      "Percentage                    float64\n",
+      "List_of_Employees_Laid_Off     object\n",
+      "dtype: object\n",
+      "****************************************************************************************************\n",
+      "No. of duplicated values:  0\n",
+      "****************************************************************************************************\n",
+      "Percentage (%) of duplicated values:  0.0\n",
+      "****************************************************************************************************\n",
+      "No. of missing values:  Company                          0\n",
+      "Location_HQ                      0\n",
+      "Industry                         0\n",
+      "Laid_Off_Count                1253\n",
+      "Date                             0\n",
+      "Source                           0\n",
+      "Funds_Raised                   390\n",
+      "Stage                            0\n",
+      "Date_Added                       0\n",
+      "Country                          0\n",
+      "Percentage                    1300\n",
+      "List_of_Employees_Laid_Off       0\n",
+      "dtype: int64\n",
+      "****************************************************************************************************\n",
+      "Percentage (%) of missing values:  Company                       0.000000\n",
+      "Location_HQ                   0.000000\n",
+      "Industry                      0.000000\n",
+      "Laid_Off_Count                0.344042\n",
+      "Date                          0.000000\n",
+      "Source                        0.000000\n",
+      "Funds_Raised                  0.107084\n",
+      "Stage                         0.000000\n",
+      "Date_Added                    0.000000\n",
+      "Country                       0.000000\n",
+      "Percentage                    0.356947\n",
+      "List_of_Employees_Laid_Off    0.000000\n",
+      "dtype: float64\n",
+      "****************************************************************************************************\n",
+      "Numerical columns are:        Laid_Off_Count  Funds_Raised  Percentage\n",
+      "0              150.0         691.0         NaN\n",
+      "1              100.0        2000.0        0.20\n",
+      "2               30.0         119.0        0.30\n",
+      "3               30.0         651.0        0.10\n",
+      "4                NaN         117.0        0.12\n",
+      "...              ...           ...         ...\n",
+      "3637             NaN           5.1        1.00\n",
+      "3638             8.0          45.0        0.10\n",
+      "3639             6.0           1.0        0.75\n",
+      "3640            20.0          90.0        0.40\n",
+      "3641            75.0          12.0         NaN\n",
+      "\n",
+      "[3642 rows x 3 columns]\n",
+      "****************************************************************************************************\n",
+      "No. of numrerical columns are:  3642\n",
+      "****************************************************************************************************\n",
+      "Categoical cloumns are:              Company     Location_HQ        Industry        Date  \\\n",
+      "0               Oda            Oslo            Food  2024-06-05   \n",
+      "1            Pagaya        Tel Aviv         Finance  2024-06-05   \n",
+      "2       Aleph Farms        Tel Aviv            Food  2024-06-05   \n",
+      "3           MoonPay           Dover          Crypto  2024-06-05   \n",
+      "4              Yext   New York City       Marketing  2024-06-05   \n",
+      "...             ...             ...             ...         ...   \n",
+      "3637        Service     Los Angeles          Travel  2020-03-16   \n",
+      "3638   HopSkipDrive     Los Angeles  Transportation  2020-03-13   \n",
+      "3639    Panda Squad     SF Bay Area        Consumer  2020-03-13   \n",
+      "3640  Tamara Mellon     Los Angeles          Retail  2020-03-12   \n",
+      "3641       EasyPost  Salt Lake City       Logistics  2020-03-11   \n",
+      "\n",
+      "                                                 Source     Stage  \\\n",
+      "0     https://techcrunch.com/2024/06/05/softbank-bac...   Unknown   \n",
+      "1     https://www.calcalistech.com/ctechnews/article...  Post-IPO   \n",
+      "2     https://www.calcalistech.com/ctechnews/article...   Unknown   \n",
+      "3     https://www.theblock.co/post/298638/moonpay-la...   Unknown   \n",
+      "4     https://www.investing.com/news/economy-news/ye...  Post-IPO   \n",
+      "...                                                 ...       ...   \n",
+      "3637  https://techcrunch.com/2020/03/16/travel-savin...      Seed   \n",
+      "3638  https://layoffs.fyi/2020/04/02/hopskipdrive-la...   Unknown   \n",
+      "3639  https://twitter.com/danielsinger/status/123854...      Seed   \n",
+      "3640            https://layoffs.fyi/list/tamara-mellon/  Series C   \n",
+      "3641  https://www.bizjournals.com/louisville/news/20...  Series A   \n",
+      "\n",
+      "               Date_Added        Country List_of_Employees_Laid_Off  \n",
+      "0     2024-06-05 18:01:25         Norway                    Unknown  \n",
+      "1     2024-06-05 23:11:24         Israel                    Unknown  \n",
+      "2     2024-06-05 23:13:43         Israel                    Unknown  \n",
+      "3     2024-06-05 23:12:47  United States                    Unknown  \n",
+      "4     2024-06-05 18:02:40  United States                    Unknown  \n",
+      "...                   ...            ...                        ...  \n",
+      "3637  2020-08-31 15:17:26  United States                    Unknown  \n",
+      "3638  2020-04-03 04:47:03  United States                    Unknown  \n",
+      "3639  2020-04-17 00:12:49  United States                    Unknown  \n",
+      "3640  2020-03-31 16:04:23  United States                    Unknown  \n",
+      "3641  2020-03-31 13:21:54  United States                    Unknown  \n",
+      "\n",
+      "[3642 rows x 9 columns]\n",
+      "****************************************************************************************************\n",
+      "No. of categoical columns are:  12\n",
+      "****************************************************************************************************\n",
+      "Date type columns are:  Empty DataFrame\n",
+      "Columns: []\n",
+      "Index: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, ...]\n",
+      "\n",
+      "[3642 rows x 0 columns]\n",
+      "****************************************************************************************************\n",
+      "Numerical correlations:                  Laid_Off_Count  Funds_Raised  Percentage\n",
+      "Laid_Off_Count        1.000000      0.123458   -0.060812\n",
+      "Funds_Raised          0.123458      1.000000   -0.074559\n",
+      "Percentage           -0.060812     -0.074559    1.000000\n",
+      "****************************************************************************************************\n",
+      "Skewness of the dataset:  1.6681900301760468\n",
+      "****************************************************************************************************\n",
+      "Kurtosis of the dataset 1.5531610607046469\n",
+      "****************************************************************************************************\n"
+     ]
+    }
+   ],
+   "source": [
+    "Inspection.inspect()"
    ]
   },
   {
