--- a/testing.ipynb
+++ b/testing.ipynb
@@ -36,7 +36,8 @@
    ],
    "source": [
     "path = input(\"Please enter the path of your csv file: \")\n",
-    "path"
+    "path\n",
+    "#C:\\Users\\Devadarsan\\Desktop\\Karthik_projects\\EDA_Package\\EDA_python_package_library\\layoffs_data.csv"
    ]
   },
   {
